# Complete the CMake buid files

cmake_minimum_required(VERSION 3.10)
project(MyProject)

add_executable(MyProgram
  ../src/main_test.cpp
  ../lib/Complex.cpp
  ../lib/addition.cpp
  ../lib/equals.cpp
  ../lib/multi.cpp
  ../lib/divis.cpp
  ../lib/abs.cpp
  ../lib/conj.cpp
  ../lib/norm.cpp
  ../lib/sqrt.cpp
  ../lib/arg.cpp
  ../lib/exp.cpp
  ../lib/log.cpp
  ../lib/sin.cpp
  ../lib/icosh.cpp
  ../lib/isinh.cpp
  ../lib/itanh.cpp
  ../lib/sub.cpp
  ../lib/im.cpp
  ../lib/inpo.cpp
  ../lib/Complex.h
  ../lib/addition.h
  ../lib/equals.h
  ../lib/multi.h
  ../lib/divis.h
  ../lib/abs.h
  ../lib/conj.h
  ../lib/norm.h
  ../lib/sqrt.h
  ../lib/exp.h
  ../lib/arg.h
  ../lib/log.h
  ../lib/sin.h
  ../lib/sub.h
  ../lib/im.h
  ../lib/icosh.h
  ../lib/isinh.h
  ../lib/itanh.h
  ../lib/inpo.h
  ../lib/real.cpp
  ../lib/real.h
  ../lib/polar.cpp
  ../lib/polar.h
  ../lib/inequals.cpp
  ../lib/inequals.h
  ../nlib/log10.cpp
  ../nlib/log10.h
  ../nlib/root.h
  ../nlib/pow.h
  ../nlib/cos.h
  ../nlib/tan.h
  ../nlib/atrigbundle.h
  ../nlib/root.cpp
  ../nlib/pow.cpp
  ../nlib/cos.cpp
  ../nlib/tan.cpp
  ../nlib/atrigbundle.cpp
  ../tests/catch_amalgamated.cpp
  ../tests/catch_amalgamated.hpp
)


add_executable(MyMain
  ../src/main.cpp
  ../lib/Complex.cpp
  ../lib/addition.cpp
  ../lib/equals.cpp
  ../lib/multi.cpp
  ../lib/divis.cpp
  ../lib/abs.cpp
  ../lib/conj.cpp
  ../lib/norm.cpp
  ../lib/sqrt.cpp
  ../lib/arg.cpp
  ../lib/exp.cpp
  ../lib/log.cpp
  ../lib/sin.cpp
  ../lib/icosh.cpp
  ../lib/isinh.cpp
  ../lib/itanh.cpp
  ../lib/sub.cpp
  ../lib/im.cpp
  ../lib/inpo.cpp
  ../lib/real.cpp
  ../lib/inequals.cpp
  ../lib/inequals.h
  ../lib/real.h
  ../lib/Complex.h
  ../lib/addition.h
  ../lib/equals.h
  ../lib/multi.h
  ../lib/divis.h
  ../lib/abs.h
  ../lib/conj.h
  ../lib/norm.h
  ../lib/sqrt.h
  ../lib/exp.h
  ../lib/arg.h
  ../lib/log.h
  ../lib/sin.h
  ../lib/sub.h
  ../lib/im.h
  ../lib/icosh.h
  ../lib/isinh.h
  ../lib/itanh.h
  ../lib/inpo.h
  ../nlib/log10.cpp
  ../nlib/log10.h
  ../nlib/root.h
  ../nlib/pow.h
  ../nlib/cos.h
  ../nlib/tan.h
  ../nlib/atrigbundle.h
  ../nlib/root.cpp
  ../nlib/pow.cpp
  ../nlib/cos.cpp
  ../nlib/tan.cpp
  ../nlib/atrigbundle.cpp
  ../lib/polar.cpp
  ../lib/polar.h
)

add_executable(MyValid
  ../src/arithvalid.cpp
  ../lib/Complex.cpp
  ../lib/addition.cpp
  ../lib/equals.cpp
  ../lib/multi.cpp
  ../lib/divis.cpp
  ../lib/abs.cpp
  ../lib/conj.cpp
  ../lib/norm.cpp
  ../lib/sqrt.cpp
  ../lib/arg.cpp
  ../lib/exp.cpp
  ../lib/log.cpp
  ../lib/sin.cpp
  ../lib/icosh.cpp
  ../lib/isinh.cpp
  ../lib/itanh.cpp
  ../lib/sub.cpp
  ../lib/im.cpp
  ../lib/inpo.cpp
  ../lib/real.cpp
  ../lib/inequals.cpp
  ../lib/inequals.h
  ../lib/real.h
  ../lib/Complex.h
  ../lib/addition.h
  ../lib/equals.h
  ../lib/multi.h
  ../lib/divis.h
  ../lib/abs.h
  ../lib/conj.h
  ../lib/norm.h
  ../lib/sqrt.h
  ../lib/exp.h
  ../lib/arg.h
  ../lib/log.h
  ../lib/sin.h
  ../lib/sub.h
  ../lib/im.h
  ../lib/icosh.h
  ../lib/isinh.h
  ../lib/itanh.h
  ../lib/inpo.h
  ../nlib/log10.cpp
  ../nlib/log10.h
  ../nlib/root.h
  ../nlib/pow.h
  ../nlib/cos.h
  ../nlib/tan.h
  ../nlib/atrigbundle.h
  ../nlib/root.cpp
  ../nlib/pow.cpp
  ../nlib/cos.cpp
  ../nlib/tan.cpp
  ../nlib/atrigbundle.cpp
  ../lib/polar.cpp
  ../lib/polar.h
)